--- a/src/index.scss
+++ b/src/index.scss
@@ -8,11 +8,14 @@
   height: 100%;
   background-color: v.$color-main-navy;
   position: relative;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   &:before {
     content: url("./assets/svg/secondGradient.svg");
     position: absolute;
-    // width: 10px;
-    // height: 10px;
     top: 184px;
     left: -306px;
     top: 0;
